# pirate-litewalletjni

./: .gitignore  README.md
src/: Cargo.toml  Dockerfile  build-docker.sh  crosscompile.sh
src/.cargo/: config
src/lib/: Cargo.toml
src/lib/src/: lib.rs
src/main/: Cargo.toml  build-cross-ubuntu.sh  build-mac.sh  build-setup-ubuntu.sh  build.sh  bundle.sh
src/main/src/: lib.rs
