[package]
name = "rustlib"
version = "1.0.0"
authors = ["Aditya Kulkarni <aditya@zecwallet.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.10.2", default-features = false }
zecwalletlitelib = { git="https://github.com/Qortal/piratewallet-light-cli", default-features=false, rev="86de26e5d58582e2a3f41ed0008ad1e04730ed3e" }
zcash_primitives = { git = "https://github.com/piratenetwork/librustzcash", rev = "f2d093fd760e59b950e93e9a4cac329f745aacf6", features = ["transparent-inputs"] }
lazy_static = "1.4.0"
num-integer = "0.1.44"
android_logger = "0.10.1"
log = "0.4.8"
base64 = "0.11.0"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hex = "0.3"
hex-serde = "0.1"

tiny-bip39 = "0.6.2"
rand = "0.7.2"
